--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/btcrooks/pecan",
   "devDependencies": {
-    "cli": "^0.10.0",
+    "commander": "^2.8.1",
     "prompt": "^0.2.14"
   }
 }
