--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/btcrooks/pecan",
   "devDependencies": {
     "commander": "^2.8.1",
-    "prompt": "^0.2.14"
+    "prompt": "^0.2.14",
+    "request": "^2.64.0",
+    "request-progress": "^0.3.1"
   }
 }
