--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "homepage": "https://github.com/btcrooks/pecan",
   "devDependencies": {
     "commander": "^2.8.1",
-    "prompt": "^0.2.14",
-    "request": "^2.64.0",
-    "request-progress": "^0.3.1"
+    "download": "^4.2.1",
+    "prompt": "^0.2.14"
   }
 }
