--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/btcrooks/pecan",
   "devDependencies": {
+    "asynch": "^0.5.2",
     "commander": "^2.8.1",
     "download": "^4.2.1",
-    "prompt": "^0.2.14"
+    "prompt": "^0.2.14",
+    "shelljs": "^0.5.3"
   }
 }
